--- a/friends_forlife/app/templates/app/index.html
+++ b/friends_forlife/app/templates/app/index.html
@@ -120,13 +120,52 @@
 								<img class="banner" src="../../static/img/main_photo.png">
 								<h2>עמותת חברים לחיים מצילה חיים בכל מחיר!</h2>
 								<h3>עמותת "חברים לחיים" הוקמה ע"י גלילה אבן חן, פועלת לחיפוש בתים מאמצים לכלבים. כל הכלבים נמסרים לאימוץ כשהם מחוסנים עם שבב ומעוקרים. הכלבים בריאים ושמחים והם ראויים לחיים ולא למוות!</h3>
-								<h4>י<b>מי אימוץ:</b> כל יום שישי 12-16:00 בצהריים, גן מאיר בת"א. גלילה מגיעה עם הכלבים המדהימים. מדי יום ניתן לתאם פגישה כדי לראות את הכלבים ולאמץ חבר לחיים.</h4>
-								<p>רוצים לאמץ כלב? רוצים להיות משפחה אומנת לכלבים?<br> גלילה - 052-8808021 תעוז -050-3080807</p>
+								<!--<h4>י<b>מי אימוץ:</b> כל יום שישי 12-16:00 בצהריים, גן מאיר בת"א. גלילה מגיעה עם הכלבים המדהימים. מדי יום ניתן לתאם פגישה כדי לראות את הכלבים ולאמץ חבר לחיים.</h4>
+								<p>רוצים לאמץ כלב? רוצים להיות משפחה אומנת לכלבים?<br> גלילה - 052-8808021 תעוז -050-3080807</p>-->
 							</section>
 						</div>
 						<div class="mainBtn"></div>
 					</main>		
-			    	<footer id="footer"></footer>
+			    	<footer id="footer">
+			            <div id="footer_data">
+			                <div id="footer_menu">
+			                    <div id="footer_menu_data">			        			            
+			                		<div class="footer_menu">
+					                    <h2><a href='/recreation-and-tours/'>אמץ כלב</a></h2>
+				                        <ul>				                        
+				                            <li><a href="">&#187;מידע על אימוץ כלבים</a></li>
+				                            <li><a href="">&#187;כלבים לאימוץ</a></li>
+				                            <li><a href="">&#187;חיפוש מתקדם</a></li>
+				                        </ul>                    
+            						</div>
+			                		<div class="footer_menu">
+					                    <h2><a href='/recreation-and-tours/'>אומנה</a></h2>
+				                        <ul>				                        
+				                            <li><a href="">&#187;רישום לאומנה</a></li>
+				                        </ul>                    
+            						</div>			        
+			                		<div class="footer_menu">
+					                    <h2><a href='/recreation-and-tours/'>על העמותה</a></h2>
+				                        <ul>				                        
+				                            <li><a href="">&#187;אודות</a></li>
+				                            <li><a href="">&#187;ימי אימוץ</a></li>
+				                            <li><a href="">&#187;צור קשר</a></li>
+				                            <li><a href="">&#187;כתבו אודותינו</a></li>
+				                        </ul>                    
+            						</div>
+			                		<div class="footer_menu">
+					                    <h2><a href='/recreation-and-tours/'>תרומות</a></h2>
+				                        <ul>				                        
+				                            <li><a href="">&#187;סלי תרומה</a></li>
+				                            <li><a href="">&#187;חנות החיות של העמותה</a></li>
+				                            <li><a href="">&#187;תרומות אוכל וציוד</a></li>
+				                            <li><a href="">&#187;התנדבות לעמותה</a></li>
+				                        </ul>                    
+            						</div>
+            					</div>
+            				</div>
+            			</div>          								    		
+			    	</footer>
 				</div><!--Block-->			    	
 			</div><!--/#inner-wrap-->
 		</div><!--/#outer-wrap-->
