--- a/friends_forlife/app/static/style/style.css
+++ b/friends_forlife/app/static/style/style.css
@@ -35,23 +35,6 @@ body {font-family: trashimclm; color: #333; background:#333333 url("../../static
   width: 100%;
 }
 
-
-.blueH{
-	font-weight:500px;
-	color:#729299;
-	display:block;
-	font-size:1.429em;
-	line-height:1.1em;
-	letter-spacing:-1px;
-	margin-bottom:4px;	
-}
-.whiteP{	
-	color:#f9f9f1;
-	font-size:1.429em;
-	letter-spacing:0.02em;
-	line-height:1.1em;
-	display:block;
-	}
 /*=========================================*/
 /*=========== HEADER SETTINGS ===============*/ 
 /*=========================================*/
@@ -65,7 +48,6 @@ body {font-family: trashimclm; color: #333; background:#333333 url("../../static
 
 /*=====Login Form===*/
 #contact { 
-	width:400px;
 	height:90px;
 	padding:7px 10px 0px 10px;
 	text-align:center;
@@ -73,41 +55,67 @@ body {font-family: trashimclm; color: #333; background:#333333 url("../../static
 }
 
 .based{
+	float: left;
+	font-family: Tahoma;
 	white-space:normal;
-	padding:10px 15px;font-size:17px;line-height:1.371;border-radius:6px;
-	color:#fff;background-color:#7A8D90; border: 0; outline: 0; 
+	padding:10px 15px;font-size:15px;line-height:1.371;border-radius:6px;
+	font-weight: bold;
+	color:#fff;
+	background-color: rgba(114, 146, 153, 0.8);
+	border: 5px solid metal;
+	outline: 0; 
 	margin: 10px 0 0 0;
 }
-#loginBannerAfterClick form input[type="submit"]{width:100px; height:25px;
-white-space:normal; background-color:#7A8D90; border: 0; outline: 0;
-padding:2px 4px;font-size:17px; border-radius:6px;
-	color:#fff; margin: -10px 0 10px 0;}
+
+.based:hover{
+	background-color: rgba(114, 146, 153, 1);
+	border: 10px solid metal;
+	
+}
+#loginBannerAfterClick form input[type="submit"]{
+	float: left;
+	
+	margin-left: -3px;
+	font-family: Tahoma;
+	width:55px;
+	height:21px;
+	white-space:normal;
+	background-color: rgba(114, 146, 153, 0.8);
+	border: 2px metalic;
+	outline: 0;
+	font-size:12px;
+	border-radius:6px;
+	color:#fff;
+	font-weight: bold;
+	margin: 8.5px 15px 0 0;
+	}
 
 #loginBannerAfterClick form input[type="text"],
-#loginBannerAfterClick form input[type="password"]{
-	height:5px;
-	width:80px;
+#loginBannerAfterClick form input[type="password"]
+{
+	float: left;
+	margin-right: 15px;
+	border-radius:4px;
+	border: none;
 	text-align:center;
-	outline: 0;
-	color:#7A8D90;
-	border-color:#7A8D90;
-	box-shadow:none;
-	padding:8px 12px;
-	font-size:15px;
-	line-height:1.467;		
- 	border-radius:6px;
- 	box-shadow:none;
- 	margin: -10px 0 10px 0;	
+	background-color: rgba(119, 112, 107, 0.05);
+	outline: none;
+	border-bottom: 2px solid rgba(62, 85, 96, 0.2);
+	font-family: Tahoma;
+	color: #3E5560;
+	font-size: 15px;
+	margin: 10px 15px 0 0;
 }
 
-.number {
-	color:#f9f9f1;
-	font-family: "chunk-1","chunk-2",serif;
-	font-size:1.429em;
-	letter-spacing:0.02em;
-	line-height:1.1em;
-	display:block;
+
+#loginBannerAfterClick form input[type="text"]:hover,
+#loginBannerAfterClick form input[type="password"]:hover
+{
+		background-color: rgba(119, 112, 107, 0.12);
+		border-bottom: 2px solid rgba(62, 85, 96, 0.65);
 }
+
+
 
 /*=====Navigator Settings===*/
 .close-btn {
@@ -195,11 +203,13 @@ padding:2px 4px;font-size:17px; border-radius:6px;
 
 #footer {	
 	background:url("../../static/img/background/footer_img.png") repeat-x #FFF;
+	/*
 	padding:140px 0px 40px 00px;
 	margin:-70px 0px 0px 0px;
-	overflow:hidden;	
+	overflow:hidden;*/
+	bottom: 0px;	
 }
-
+/*
 #footer{
 margin:0 auto; width:100%; height: auto !important; height:270px;}
 #footer_data{
@@ -240,6 +250,7 @@ text-decoration:underline}
 float:right;}
 #footer_menu a{
 font-size: 11px;}
+*/
 /*=========================================*/
 /*=========== PAGE - INDEX PAGE ===============*/ 
 /*=========================================*/
