--- a/friends_forlife/app/templates/app/dogs_4_adoption.html
+++ b/friends_forlife/app/templates/app/dogs_4_adoption.html
@@ -4,7 +4,7 @@
 	    <meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">	
-	    <title>[4] Treasure Island</title>	
+	    <title>Friends for Life</title>	
 		<script src="../../static/js/modernizr.js"></script>
 		<link rel="stylesheet" href="../../static/style/style.css">
 		<link rel="stylesheet" href="../../static/style/styleMobile.css">
@@ -14,7 +14,7 @@
 			<div id="inner-wrap">	
 			    <header id="top">
 			        <div class="block">
-			            <a href="index.html"  id="logo"></a><!--Logo-->
+			            <a href="index.html" id="logo"></a><!--Logo-->
 			            <a class="nav-btn" id="nav-open-btn" href="#nav">Book Navigation</a>
 			            <div id="contact">
 			                <span class="based">we're based in Limerick</span>
@@ -23,7 +23,7 @@
 					    <nav id="nav">
 				            <ul>
 				                <li class="is-active navBtnAdopt">
-				                    <a href="#">אמץ כלב</a>
+				                    <a href="house_registration.html">אמץ כלב</a>
 				                </li>
 				             	<li class="navBtnFoster">
 				                    <a href="#">רישום לאומנה</a>
