--- a/friends_forlife/app/templates/app/index.html
+++ b/friends_forlife/app/templates/app/index.html
@@ -94,29 +94,28 @@
 						<div class="mainTop"></div>
 						<div class="mainContent">
 							<section class="indexLeftSide">
-								<h2>אתם גם יכולים לעזור:</h2>
 								<article class="indexLeftSideAdopt">
 									<a href="dogs_4_adoption.html">
 										<h4 class="header">אימוץ כלבים</h4>
-										<p class="paragraph">אימוץ כלבים, גורים, מבוגרים מכל הגזעים והסוגים - איך מתחילים?</p>
+										<p class="paragraph">אימוץ כלבים, גורים, בוגרים מכל הגזעים והסוגים - איך מתחילים?</p>
 									</a>
 								</article>								
 								<article class="indexLeftSideVolenteer">
 									<a href="dogs_4_adoption.html">
 										<h4 class="header">דרושים מתנדבים</h4>
-										<p class="paragraph">רוצים לעזור לכלבים? אנחנו צריכים מתנדבים בכל חלקי הארץ?</p>
+										<p class="paragraph">רוצים לעזור לכלבים? לעמותה דרושים מתנדבים מכל חלקי הארץ</p>
 									</a>									
 								</article>
 								<article class="indexLeftSideAdoptaionDays">
 									<a href="dogs_4_adoption.html">
 										<h4 class="header">ימי אימוץ</h4>
-										<p class="paragraph">רשימת ימי אימוץ שבו תמצאו את החבר החדש לחיים שלכם</p>
+										<p class="paragraph">רשימת ימי האימוץ בהם תוכלו למצוא חבר לחיים</p>
 									</a>										
 								</article>
 								<article class="indexLeftSideStore">
 									<a href="dogs_4_adoption.html">
-										<h4 class="header">חנות מזון לחיות של העמותה</h4>
-										<p class="paragraph">80% מרווח החנות נתרם להציל עוד כלבים! בעזרת המזון שתקנו תצילו חיים</p>
+										<h4 class="header">חנות המזון שלנו</h4>
+										<p class="paragraph">80% מרווח החנות נתרם להצלת  כלבים נוספים! </p>
 									</a>										
 								</article>
 							</section>
@@ -124,7 +123,7 @@
 							<section class="indexRightSide">
 								<img class="banner" src="../../static/img/main_photo.png">
 								<h2>עמותת חברים לחיים מצילה חיים בכל מחיר!</h2>
-								<h3>עמותת "חברים לחיים" הוקמה ע"י גלילה אבן חן, פועלת לחיפוש בתים מאמצים לכלבים. כל הכלבים נמסרים לאימוץ כשהם מחוסנים עם שבב ומעוקרים. הכלבים בריאים ושמחים והם ראויים לחיים ולא למוות!</h3>
+								<h3>עמותת "חברים לחיים" הוקמה ע"י גלילה אבן חן ופועלת לחיפוש בתים מאמצים לכלבים. כל הכלבים נמסרים לאימוץ כשהם מחוסנים עם שבב ומעוקרים. הכלבים בריאים ושמחים והם ראויים לחיים ולא למוות!</h3>
 								<!--<h4>י<b>מי אימוץ:</b> כל יום שישי 12-16:00 בצהריים, גן מאיר בת"א. גלילה מגיעה עם הכלבים המדהימים. מדי יום ניתן לתאם פגישה כדי לראות את הכלבים ולאמץ חבר לחיים.</h4>
 								<p>רוצים לאמץ כלב? רוצים להיות משפחה אומנת לכלבים?<br> גלילה - 052-8808021 תעוז -050-3080807</p>-->
 							</section>
