--- a/friends_forlife/app/templates/app/dogs_list.html
+++ b/friends_forlife/app/templates/app/dogs_list.html
@@ -4,7 +4,7 @@
 	    <meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">	
-	    <title>[4] Treasure Island</title>	
+	    <title>Friends for Life</title>	
 		<script src="../../static/js/modernizr.js"></script>
 		<link rel="stylesheet" href="../../static/style/style.css">
 		<link rel="stylesheet" href="../../static/style/styleMobile.css">
@@ -23,10 +23,10 @@
 					    <nav id="nav">
 				            <ul>
 				                <li class="is-active navBtnAdopt">
-				                    <a href="#">אמץ כלב</a>
+				                    <a href="dogs_4_adoption.html">אמץ כלב</a>
 				                </li>
 				             	<li class="navBtnFoster">
-				                    <a href="#">רישום לאומנה</a>
+				                    <a href="house_registration.html">רישום לאומנה</a>
 				                </li>
 				             <!--<li class="navBtnAbout">
 				                    <a href="#">אודות</>
@@ -38,7 +38,7 @@
 				                    <a href="#">צור קשר</a>
 				                </li>-->
 				                <li class="navBtnDonate">
-				                    <a href="#">תרומה</a></a>
+				                    <a href="donation_baskets.html">תרומה</a></a>
 				                </li>
 				            </ul>	
 			            	<a class="close-btn" id="nav-close-btn" href="#top">Return to Content</a>
