Added media url to main project

--- a/friends_forlife/app/templates/app/dogs_list.html
+++ b/friends_forlife/app/templates/app/dogs_list.html
@@ -54,7 +54,7 @@
                                 <div id="dog_div"   <!-- here come's dog's pic-->
 					     		    <p class="name">{{ dog.name }}</p>
 					     		    <p class="age"> {{ dog.age }} גיל:</p>
-				     		    	<img src={{ dog.picture }}>
+				     		    	<img src={{ dog.picture.url }}>
 					     			<article class="description"> אני מיקי, כלבה הרפתקנית שאוהבת בלב לבלב לבלחב בלחלבח לח בלחב לבח לחבל בחבלחל לבחבל לבחלבח </article>
 									<!--  <p class="description"> {{ dog.description }}</p> -->   
 									<p class="gender"> {{ dog.gender }} צריך למקם תמונה של מין הכלב</p>
