dogs_list - added dog.description from database

--- a/friends_forlife/app/templates/app/dogs_list.html
+++ b/friends_forlife/app/templates/app/dogs_list.html
@@ -55,7 +55,7 @@
 					     		    <p class="name">{{ dog.name }}</p>
 					     		    <p class="age"> {{ dog.age }} גיל:</p>
 				     		    	<img src={{ dog.picture.url }}>
-					     			<article class="description"> אני מיקי, כלבה הרפתקנית שאוהבת בלב לבלב לבלחב בלחלבח לח בלחב לבח לחבל בחבלחל לבחבל לבחלבח </article>
+					     			<article class="description"> {{ dog.description }}</article>
 									<!--  <p class="description"> {{ dog.description }}</p> -->   
 									<p class="gender"> {{ dog.gender }} צריך למקם תמונה של מין הכלב</p>
 					     	    </div>
