--- a/friends_forlife/app/static/style/styleMobile.css
+++ b/friends_forlife/app/static/style/styleMobile.css
@@ -188,14 +188,19 @@
 /*=========================================*/
 /*=========== GENERAL MAIN SETTINGS ===============*/ 
 /*=========================================*/
-.mainBtn,.mainTop,.indexLeftSide,.indexRightSide{
+.desktopMainContent{
 	display:none;
 }
-
-.mainContent{background:transparent; width:auto;}
+.mobileMainContent{
+	display:block;
+}
 /*=========================================*/
 /*=========== GENERAL FOOTER SETTINGS ===============*/ 
 /*=========================================*/
+
+.footer_menu{
+	display:none;
+}
 
 /*=========================================*/
 /*=========== PAGE - ADOPT A DOG ===============*/ 
@@ -205,7 +210,32 @@
 /*=========== PAGE - Index ===============*/ 
 /*=========================================*/
 
+.mobileMainContent{
+	display:table;
+	width:80%;
+}
 
+.mobileMainContent img{
+	width:100px;
+	height:80px;
+	float:right;
+	margin: 0 20px 0 0;	
+}
+.mobileMainContent h2{
+    vertical-align: middle;
+    display: table-cell;
+    margin: 30px 30px 0 0;
+    float:right;	
+}
+.mobileMainContent hr{
+    display: block;
+    width:100%;
+    margin-top: 4em;
+    margin-bottom: 2.5em;
+    margin-right: 12%;    
+    border-style: inset;
+    border-width: 1px;	
+}
 
 
 
