--- a/friends_forlife/app/static/style/style.css
+++ b/friends_forlife/app/static/style/style.css
@@ -196,25 +196,25 @@ footer, #outer-wrap:after {
 }
 
 #main .block {
-  padding: 2.625em 1.875em;
+	 padding: 42px 30px;
 }
 
 .mainTop{
-	background:url("../../static/img/background/main_top_bones.jpg") no-repeat;
+	background:url("../../static/img/background/top/main_top_bones.jpg") no-repeat;
 	width:980px;
-	height:69px;
+	height:68px;
 	display:block;
 }
 
 .mainContent{
-	background:url("../../static/img/background/main-content-tile.jpg") repeat-y;
+	background:url("../../static/img/background/content/main-content-tile.jpg") repeat-y;
 	width:920px;
 	overflow:hidden;
 	padding:40px 20px 0px 40px;
 }
 
 .mainBtn{
-	background:url("../../static/img/background/main-content-btm-curve.jpg") no-repeat;
+	background:url("../../static/img/background/btm/main-content-btm-curve.jpg") no-repeat;
 	height:33px;
 	display:block;
 	width:980px;	
@@ -485,7 +485,13 @@ input[type="search"]::-webkit-search-decoration {
 	height:10px;
 	margin:-57px -180px 0 30px;
 	}
-
+	
+	#nav img{
+		display: none;
+	}
+	#nav hr{
+		display: none;
+	}
 
 	#nav .close-btn {
 	  display: none;
