--- a/friends_forlife/app/static/style/styleMobile.css
+++ b/friends_forlife/app/static/style/styleMobile.css
@@ -185,6 +185,38 @@
     -o-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
   }
+
+#nav ul li{
+	display:table;
+	width:100%;
+}
+
+#nav ul li img{
+	width:80px;
+	height:60px;
+	float:right;
+	margin: 0 20px 0 0;	
+}
+#nav ul li a{
+    vertical-align: middle;
+    display: table-cell;
+    margin: 10px -15px 0 0;
+    float:right;
+    color:#7A8D90;
+    font-size:15px;
+}
+#nav ul li hr{
+    display: block;
+    width:60%;
+    margin-top: 64px;
+    margin-bottom: 40px;
+    margin-right: 30%;    
+    border-style: inset;
+    border-width: 1px;	
+}
+
+
+
 /*=========================================*/
 /*=========== GENERAL MAIN SETTINGS ===============*/ 
 /*=========================================*/
@@ -194,6 +226,16 @@
 .mobileMainContent{
 	display:block;
 }
+
+.mainTop{
+	background:url("../../static/img/background/top/main_top_bones_600.jpg") no-repeat;
+}
+
+.mainContent{
+	background:url("../../static/img/background/content/main-content-tile.jpg") repeat-y;
+}
+
+
 /*=========================================*/
 /*=========== GENERAL FOOTER SETTINGS ===============*/ 
 /*=========================================*/
@@ -230,13 +272,605 @@
 .mobileMainContent hr{
     display: block;
     width:100%;
-    margin-top: 4em;
-    margin-bottom: 2.5em;
+    margin-top: 64px;
+    margin-bottom: 40px;
     margin-right: 12%;    
     border-style: inset;
     border-width: 1px;	
 }
 
-
+.mobileMainContent h2 a{
+    color:#7A8D90;	
+}
 
 } /*END OF MEDIA*/
+
+
+/* ----------- iPhone 4 and 4S ----------- */
+
+/* Portrait*/
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+
+		#main .block {
+		  padding: 12px 0px;
+		}
+
+		.mainTop{
+			background:url("../../static/img/background/top/main_top_bones_340.jpg") no-repeat;
+			width:330px;
+			height:24px;
+			display:block;
+		}
+
+		.mainContent{
+			background:url("../../static/img/background/content/main-content-tile.jpg") repeat-y;
+			width:340px;
+			overflow:hidden;
+			padding:10px 10px 0px 40px;
+		}
+
+		.mainBtn{
+			background:url("../../static/img/background/btm/main-content-btm-curve_340.jpg") no-repeat;
+			height:11px;
+			display:block;
+			width:980px;	
+		}
+
+		.mobileMainContent{
+			width:90%;
+		}
+
+		.mobileMainContent img{
+			width:80px;
+			height:60px;
+			margin: 0 20px 0 0;	
+		}
+		.mobileMainContent h2{
+			margin: 20px 20px 0 0;
+			font-size:18px;
+
+		}
+		.mobileMainContent hr{    
+			margin-bottom: 20px;
+			margin-right: 33%;    	
+		}
+			
+}
+/* Landscape */
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: landscape) {
+
+		#main .block {
+		  padding: 12px 0;
+		}
+
+		.mainTop{
+			background:url("../../static/img/background/top/main_top_bones_480.jpg") no-repeat;
+			width:480px;
+			height:34px;
+			display:block;
+		}
+
+		.mainContent{
+			background:url("../../static/img/background/content/main-content-tile_480.jpg") repeat-y;
+			width:480px;
+			overflow:hidden;
+			padding:10px 0px 0px 0px;
+		}
+
+		.mainBtn{
+			background:url("../../static/img/background/btm/main-content-btm-curve_340.jpg") no-repeat;
+			height:11px;
+			display:block;
+			width:980px;	
+		}
+
+		.mobileMainContent{
+			width:70%;
+		}
+
+		.mobileMainContent img{
+			width:80px;
+			height:60px;
+			margin: 0 20px 0 0;	
+		}
+		.mobileMainContent h2{
+			margin: 20px 20px 0 0;
+			font-size:18px;
+
+		}
+		.mobileMainContent hr{    
+			margin-bottom: 20px;
+			margin-right: 33%;    	
+		}	
+}
+
+/* ----------- iPhone 5 and 5S ----------- */
+
+/* Landscape */
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: landscape) {
+
+
+
+		#main .block {
+		  padding: 12px 40px;
+		}
+
+		.mainTop{
+			background:url("../../static/img/background/top/main_top_bones_480.jpg") no-repeat;
+			width:480px;
+			height:34px;
+			display:block;
+		}
+
+		.mainContent{
+			background:url("../../static/img/background/content/main-content-tile_480.jpg") repeat-y;
+			width:480px;
+			overflow:hidden;
+			padding:10px 0px 0px 0px;
+		}
+
+		.mainBtn{
+			background:url("../../static/img/background/btm/main-content-btm-curve_340.jpg") no-repeat;
+			height:11px;
+			display:block;
+			width:980px;	
+		}
+
+		.mobileMainContent{
+			width:70%;
+		}
+
+		.mobileMainContent img{
+			width:80px;
+			height:60px;
+			margin: 0 20px 0 0;	
+		}
+		.mobileMainContent h2{
+			margin: 20px 20px 0 0;
+			font-size:18px;
+
+		}
+		.mobileMainContent hr{    
+			margin-bottom: 20px;
+			margin-right: 33%;    	
+		}	
+
+
+}
+
+/* ----------- iPhone 6 ----------- */
+
+/* Portrait */
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2){ 
+
+
+		#main .block {
+		  padding: 22px 0px;
+		}
+
+		.mainTop{
+			background:url("../../static/img/background/top/main_top_bones_380.jpg") no-repeat;
+			width:380px;
+			height:27px;
+			display:block;
+
+		}
+
+		.mainContent{
+			background:url("../../static/img/background/content/main-content-tile.jpg") repeat-y;
+			width:380px;
+			overflow:hidden;
+			padding:10px 10px 0px 40px;
+		}
+
+		.mainBtn{
+			background:url("../../static/img/background/btm/main-content-btm-curve_340.jpg") no-repeat;
+			height:11px;
+			display:block;
+			width:980px;	
+		}
+
+		.mobileMainContent{
+			width:75%;
+		}
+
+		.mobileMainContent img{
+			width:80px;
+			height:60px;
+			margin: 0 20px 0 0;	
+		}
+		.mobileMainContent h2{
+			margin: 20px 20px 0 0;
+			font-size:18px;
+
+		}
+		.mobileMainContent hr{    
+			margin-bottom: 20px;
+			margin-right: 33%;    	
+		}
+			
+
+}
+
+/* Landscape */
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: landscape) { 
+
+
+		#main .block {
+		  padding: 22px 90px;
+		}
+
+		.mainTop{
+			background:url("../../static/img/background/top/main_top_bones_480.jpg") no-repeat;
+			width:480px;
+			height:34px;
+			display:block;
+		}
+
+		.mainContent{
+			background:url("../../static/img/background/content/main-content-tile_480.jpg") repeat-y;
+			width:480px;
+			overflow:hidden;
+			padding:10px 0px 0px 0px;
+		}
+
+		.mainBtn{
+			background:url("../../static/img/background/btm/main-content-btm-curve_340.jpg") no-repeat;
+			height:11px;
+			display:block;
+			width:980px;	
+		}
+
+		.mobileMainContent{
+			width:70%;
+		}
+
+		.mobileMainContent img{
+			width:80px;
+			height:60px;
+			margin: 0 20px 0 0;	
+		}
+		.mobileMainContent h2{
+			margin: 20px 20px 0 0;
+			font-size:18px;
+
+		}
+		.mobileMainContent hr{    
+			margin-bottom: 20px;
+			margin-right: 33%;    	
+		}
+
+}
+
+/* ----------- iPhone 6 + Galaxy S3----------- */
+
+/* Portrait and Landscape */
+
+/* Portrait */
+@media only screen 
+  and (min-device-width: 414px) 
+  and (max-device-width: 736px) 
+  and (-webkit-min-device-pixel-ratio: 3)
+  and (orientation: portrait) { 
+
+		#main .block {
+		  padding: 42px 0px;
+		}
+}
+
+/* Landscape */
+@media only screen 
+  and (min-device-width: 414px) 
+  and (max-device-width: 736px) 
+  and (-webkit-min-device-pixel-ratio: 3)
+  and (orientation: landscape) { 
+
+		#main .block {
+		  padding: 22px 30px;
+		}
+
+		.mainTop{
+			background:url("../../static/img/background/top/main_top_bones_680.jpg") no-repeat;
+			width:680px;
+			height:48px;
+			display:block;
+		}
+
+		.mainContent{
+			background:url("../../static/img/background/content/main-content-tile_680.jpg") repeat-y;
+			width:680px;
+			overflow:hidden;
+			padding:10px 0px 0px 0px;
+		}
+
+		.mainBtn{
+			background:url("../../static/img/background/btm/main-content-btm-curve_340.jpg") no-repeat;
+			height:11px;
+			display:block;
+			width:980px;	
+		}
+
+		.mobileMainContent{
+			width:77%;
+		}
+
+		.mobileMainContent img{
+			width:80px;
+			height:60px;
+			margin: 0 20px 0 0;	
+		}
+		.mobileMainContent h2{
+			margin: 20px 20px 0 0;
+			font-size:18px;
+
+		}
+		.mobileMainContent hr{    
+			margin-bottom: 20px;
+			margin-right: 23%;    	
+		}
+
+}
+
+
+/* ----------- Galaxy S4 ----------- */
+
+
+/* Portrait like iphone 6 */
+
+/* Landscape */
+@media screen 
+  and (device-width: 320px) 
+  and (device-height: 640px) 
+  and (-webkit-device-pixel-ratio: 3) 
+  and (orientation: landscape) {
+
+
+		#main .block {
+		  padding: 22px 10px;
+		}
+
+		.mainTop{
+			background:url("../../static/img/background/top/main_top_bones_680.jpg") no-repeat;
+			width:680px;
+			height:48px;
+			display:block;
+		}
+
+		.mainContent{
+			background:url("../../static/img/background/content/main-content-tile_680.jpg") repeat-y;
+			width:680px;
+			overflow:hidden;
+			padding:10px 0px 0px 0px;
+		}
+
+		.mainBtn{
+			background:url("../../static/img/background/btm/main-content-btm-curve_340.jpg") no-repeat;
+			height:11px;
+			display:block;
+			width:980px;	
+		}
+
+		.mobileMainContent{
+			width:77%;
+		}
+
+		.mobileMainContent img{
+			width:80px;
+			height:60px;
+			margin: 0 20px 0 0;	
+		}
+		.mobileMainContent h2{
+			margin: 20px 20px 0 0;
+			font-size:18px;
+
+		}
+		.mobileMainContent hr{    
+			margin-bottom: 20px;
+			margin-right: 23%;    	
+		}
+
+
+
+}
+
+/* ----------- Galaxy S5 ----------- */
+
+/* Portrait and Landscape */
+@media screen 
+  and (device-width: 360px) 
+  and (device-height: 640px) 
+  and (-webkit-device-pixel-ratio: 3) {
+
+
+}
+
+/* Portrait */
+@media screen 
+  and (device-width: 360px) 
+  and (device-height: 640px) 
+  and (-webkit-device-pixel-ratio: 3) 
+  and (orientation: portrait) {
+
+}
+
+/* Landscape */
+@media screen 
+  and (device-width: 360px) 
+  and (device-height: 640px) 
+  and (-webkit-device-pixel-ratio: 3) 
+  and (orientation: landscape) {
+
+}
+
+
+/* ----------- Desktop - Non-Retina Screens ----------- */
+@media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 1) { 
+
+}
+
+/* ----------- Desktop - Retina Screens ----------- */
+@media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (min-resolution: 192dpi) { 
+
+
+}
+
+/* ----------- iPad mini ----------- */
+
+/* Portrait and Landscape */
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+
+}
+
+/* Portrait */
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (orientation: portrait) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+
+}
+
+/* Landscape */
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (orientation: landscape) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+
+}
+
+/* ----------- iPad 1 and 2 ----------- */
+/* Portrait and Landscape */
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+
+}
+
+/* Portrait */
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (orientation: portrait) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+
+}
+
+/* Landscape */
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (orientation: landscape) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+
+}
+
+/* ----------- iPad 3 and 4 ----------- */
+/* Portrait and Landscape */
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 2) {
+
+}
+
+/* Portrait */
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (orientation: portrait) 
+  and (-webkit-min-device-pixel-ratio: 2) {
+
+}
+
+/* Landscape */
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (orientation: landscape) 
+  and (-webkit-min-device-pixel-ratio: 2) {
+
+}
+
+/* ----------- Galaxy Tab 10.1 ----------- */
+
+/* Portrait and Landscape */
+@media 
+  (min-device-width: 800px) 
+  and (max-device-width: 1280px) {
+
+}
+
+/* Portrait */
+@media 
+  (max-device-width: 800px) 
+  and (orientation: portrait) { 
+
+}
+
+/* Landscape */
+@media 
+  (max-device-width: 1280px) 
+  and (orientation: landscape) { 
+
+}
+
+/* ----------- Asus Nexus 7 ----------- */
+
+/* Portrait and Landscape */
+@media screen 
+  and (device-width: 601px) 
+  and (device-height: 906px) 
+  and (-webkit-min-device-pixel-ratio: 1.331) 
+  and (-webkit-max-device-pixel-ratio: 1.332) {
+
+}
+
+/* Portrait */
+@media screen 
+  and (device-width: 601px) 
+  and (device-height: 906px) 
+  and (-webkit-min-device-pixel-ratio: 1.331) 
+  and (-webkit-max-device-pixel-ratio: 1.332) 
+  and (orientation: portrait) {
+
+}
+
+/* Landscape */
+@media screen 
+  and (device-width: 601px) 
+  and (device-height: 906px) 
+  and (-webkit-min-device-pixel-ratio: 1.331) 
+  and (-webkit-max-device-pixel-ratio: 1.332) 
+  and (orientation: landscape) {
+
+}
