--- a/friends_forlife/app/templates/app/dogs_4_adoption.html
+++ b/friends_forlife/app/templates/app/dogs_4_adoption.html
@@ -184,8 +184,8 @@
 												<h3>תכונות אופי</h3>
 												<input type="checkbox" name="Characteristics[]" value="childrens_friendly"><label>ידידותי לילדים</label><br>
 												<input type="checkbox" name="Characteristics[]" value="suitable_for_allergic"><label>מתאים לאלרגיים</label><br>
-			                                    <input type="checkbox" name="Characteristics[]" value="habituated_for_needs"><label>מחונך לצרכים</label>
-			                                    <input type="submit">
+			                                    <input type="checkbox" name="Characteristics[]" value="habituated_for_needs"><label>מחונך לצרכים</label><br>
+			                                    <input type="submit" class="submitBtn2" value="חפש">
 			                                </section>
 											<div class="clear"></div>
 										</form>
